--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,102 +3,144 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/beige">
+
 
     <TextView
-        android:id="@+id/username_text"
-        android:layout_width="133dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Username"
-        android:textSize="20sp"
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:textSize="50sp"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        android:paddingHorizontal="10sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/username_layout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        />
     <TextView
-        android:id="@+id/password_text"
-        android:layout_width="133dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Password"
-        android:textSize="20sp"
+        android:id="@+id/oldHabits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/old_habits_die_hard"
+        android:textSize="23sp"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/login"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+        />
 
-    <EditText
-        android:id="@+id/username_box"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/password_layout"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/username_text"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/username_text"
-        app:layout_constraintTop_toTopOf="@+id/username_text" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/password_box"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/password_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="@string/password"
+            android:textSize="20sp"
+            android:textColor="@color/blue"
+            android:paddingLeft="10sp" />
+
+        <EditText
+            android:id="@+id/password_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:layout_weight="3"
+            android:inputType="textPassword"
+            android:textSize="20sp"
+            android:ems="10"
+            app:layout_constraintEnd_toEndOf="@id/username_text"
+            android:layout_marginEnd="10sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/username_layout"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/password_text"
+        app:layout_constraintBottom_toTopOf="@id/password_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/password_text"
-        app:layout_constraintTop_toTopOf="@+id/password_text"
-        app:layout_constraintVertical_bias="0.555" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/username_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/username"
+            android:textSize="20sp"
+            android:textColor="@color/blue"
+            android:paddingLeft="10sp"
+            app:layout_constraintTop_toBottomOf="@+id/password_text" />
+
+        <EditText
+            android:id="@+id/username_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:layout_marginRight="10sp"
+            android:inputType="textPersonName"
+            android:textSize="20sp"
+            android:ems="10"
+            app:layout_constraintEnd_toEndOf="@id/username_text"
+            app:layout_constraintTop_toTopOf="@+id/password_text" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
         android:text="Login"
+        android:backgroundTint="@color/pink"
+        android:textColor="@color/blue"
+        app:layout_constraintEnd_toStartOf="@id/create_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_text" />
+        app:layout_constraintTop_toBottomOf="@id/password_layout"
+        app:layout_constraintHorizontal_bias="0.95"/>
 
     <Button
         android:id="@+id/create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:text="Create"
-        app:layout_constraintBottom_toBottomOf="@+id/login_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/login_button"
-        app:layout_constraintTop_toTopOf="@+id/login_button" />
-
+        android:backgroundTint="@color/pink"
+        android:textColor="@color/blue"
+        app:layout_constraintEnd_toEndOf="@id/password_layout"
+        app:layout_constraintTop_toBottomOf="@id/password_layout"
+        app:layout_constraintStart_toStartOf="@id/password_layout"
+        app:layout_constraintHorizontal_bias="0.90"
+        />
     <TextView
         android:id="@+id/info_box"
-        android:layout_width="301dp"
-        android:layout_height="138dp"
-        android:layout_marginBottom="16dp"
-        android:text="Results here!!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="@string/account_created"
+        android:textSize="25sp"
+        android:textColor="@color/blue"
+        android:background="@color/pink"
+        android:padding="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
