--- a/app/src/main/res/layout/habit_fragment.xml
+++ b/app/src/main/res/layout/habit_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container1"
-    tools:context=".MainActivity">
+   >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,13 +23,13 @@
             android:id="@+id/title_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_700"
+            android:background="@color/blue"
             android:gravity="center"
             android:padding="20dp"
             android:text="Habit"
             android:textColor="@color/white"
             android:textSize="20sp"
-            tools:ignore="MissingConstraints"></TextView>
+            tools:ignore="MissingConstraints"/>
 
         <EditText
             android:id="@+id/habitTitle"
@@ -37,7 +37,7 @@
             android:layout_height="41dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Title"
+            android:hint="Title"
             tools:layout_editor_absoluteX="31dp"
             tools:layout_editor_absoluteY="87dp" />
 
@@ -47,7 +47,7 @@
             android:layout_height="45dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Reason"
+            android:hint="Reason"
             tools:layout_editor_absoluteX="31dp"
             tools:layout_editor_absoluteY="142dp" />
 
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="date"
-            android:text="Date to Start"
+            android:hint="Date to Start"
             tools:layout_editor_absoluteX="31dp"
             tools:layout_editor_absoluteY="210dp" />
 
