--- a/app/src/main/res/layout/habit_list_content.xml
+++ b/app/src/main/res/layout/habit_list_content.xml
@@ -8,9 +8,11 @@
         android:id="@+id/habit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="15dp"
         android:text="Title"
-        android:textSize="20sp">
+        android:textSize="25sp"
+        android:textColor="@color/blue"
+        android:background="@color/beige">
 
     </TextView>
 
