--- a/app/src/main/res/layout/habitevent_list.xml
+++ b/app/src/main/res/layout/habitevent_list.xml
@@ -52,4 +52,15 @@
         app:menu="@menu/bottom_navigation_main"
     />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addHabitEventButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_gravity="bottom|end"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintRight_toRightOf="@id/bottom_navigation"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
