--- a/app/src/main/res/layout/habitevent_list.xml
+++ b/app/src/main/res/layout/habitevent_list.xml
@@ -53,7 +53,7 @@
     />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addHabitEventButton"
+        android:id="@+id/add_habit_event_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
