--- a/app/src/main/res/layout/habit_list.xml
+++ b/app/src/main/res/layout/habit_list.xml
@@ -27,13 +27,12 @@
             android:background="@color/blue"
             />
 
-
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/habit_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            />
+            android:gravity="center" />
+
 
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
