--- a/app/src/main/res/layout/habit_event_fragment.xml
+++ b/app/src/main/res/layout/habit_event_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -56,7 +56,40 @@
             android:calendarViewShown="false"
             android:datePickerMode="spinner"/>
 
+        <ImageView
+            android:id="@+id/habitEventImage"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/UploadBtn"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_weight="1"
+                android:background="@color/blue"
+                android:text="Upload Image"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/TakePhotoButton"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Open Camera"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/white"
+                android:background="@color/blue"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
