--- a/app/src/main/res/layout/habit_event_fragment.xml
+++ b/app/src/main/res/layout/habit_event_fragment.xml
@@ -51,6 +51,7 @@
             android:id="@+id/habitEventDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:ems="10"
             android:layout_gravity="center"
             android:calendarViewShown="false"
@@ -65,6 +66,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
             <Button
@@ -89,6 +91,52 @@
                 android:background="@color/blue"/>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addLocationButton"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_weight="1"
+                android:background="@color/blue"
+                android:text="Add Location"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/removeLocationButton"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Remove Location"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/white"
+                android:background="@color/blue"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/locationText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No location saved"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:background="@color/white"
+            android:textColor="@color/blue"
+            android:layout_marginTop="15dp"/>
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="206dp"
+            android:layout_marginTop="15dp"
+            android:visibility="visible"/>
 
     </LinearLayout>
 
