--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/sign_in"
         android:textSize="50sp"
         android:textColor="@color/blue"
         android:textStyle="bold"
@@ -107,7 +107,7 @@
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/sign_in"
         android:backgroundTint="@color/pink"
         android:textColor="@color/blue"
         app:layout_constraintEnd_toStartOf="@id/create_button"
@@ -119,7 +119,7 @@
         android:id="@+id/create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create"
+        android:text="@string/create_profile"
         android:backgroundTint="@color/pink"
         android:textColor="@color/blue"
         app:layout_constraintEnd_toEndOf="@id/password_layout"
@@ -127,20 +127,5 @@
         app:layout_constraintStart_toStartOf="@id/password_layout"
         app:layout_constraintHorizontal_bias="0.90"
         />
-    <TextView
-        android:id="@+id/info_box"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:text="@string/account_created"
-        android:textSize="25sp"
-        android:textColor="@color/blue"
-        android:background="@color/pink"
-        android:padding="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
