--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -1,16 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="This is User Profile"
-        android:textSize="30sp"
-        android:textColor="@color/blue"
-    />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+        android:id="@+id/profile_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20sp"
+        >
+
+        <LinearLayout
+            android:id="@+id/profile_info"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/profile_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textSize="30sp"
+                android:text=""
+                android:textColor="@color/blue"
+                android:textStyle="bold"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_weight="20"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/edit_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/pink"
+                android:text="Edit Profile"
+                android:textColor="@color/blue"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:theme="@style/MyButtonStyle"
+                android:paddingHorizontal="0dp"
+                android:paddingVertical="0dp"
+                android:layout_weight="1"
+                android:layout_marginRight="10sp"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/profile_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_username"
+            android:minWidth="150sp"
+            android:minHeight="150sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="@color/pink" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal|center_vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal|center_vertical"
+                android:paddingHorizontal="2dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="5sp"
+                    android:layout_marginRight="10sp" >
+                    <TextView
+                        android:id="@+id/profile_followers_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="100"
+                        android:textSize="15sp"
+                        android:textColor="@color/blue"
+                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
+                    <TextView
+                        android:id="@+id/profile_followers"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/followers"
+                        android:textStyle="bold"
+                        android:textSize="15sp"
+                        android:textColor="@color/blue"
+                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="5sp"
+                    android:layout_marginRight="10sp" >
+                    <TextView
+                        android:id="@+id/profile_following_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="100"
+                        android:textSize="15sp"
+                        android:textColor="@color/blue"
+                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
+                    <TextView
+                        android:id="@+id/profile_following"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/following"
+                        android:textStyle="bold"
+                        android:textSize="15sp"
+                        android:textColor="@color/blue"
+                        app:layout_constraintStart_toEndOf = "@id/profile_followers"/>
+                </LinearLayout>
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:orientation="vertical"-->
+    <!--                android:layout_marginRight="10sp">-->
+    <!--                <TextView-->
+    <!--                    android:id="@+id/profile_habit_count"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_gravity="center"-->
+    <!--                    android:text="100"-->
+    <!--                    android:textSize="15sp"-->
+    <!--                    android:textColor="@color/blue"-->
+    <!--                    app:layout_constraintStart_toEndOf = "@id/profile_icon"/>-->
+    <!--                <TextView-->
+    <!--                    android:id="@+id/profile_habits"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_gravity="center"-->
+    <!--                    android:text="@string/habits"-->
+    <!--                    android:textStyle="bold"-->
+    <!--                    android:textSize="15sp"-->
+    <!--                    android:textColor="@color/blue"-->
+    <!--                    app:layout_constraintStart_toEndOf = "@id/profile_following"/>-->
+    <!--            </LinearLayout>-->
+            </LinearLayout>
+            <TextView
+                android:id="@+id/bio_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:textSize="17sp"
+                android:paddingHorizontal="1dp"
+                android:textColor="@color/blueLight"
+                android:layout_gravity="center_vertical|center_horizontal"/>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5sp"
+        android:layout_marginRight="20sp"
+        android:layout_marginLeft="20sp"
+        android:background="@color/pinkLight"
+        app:layout_constraintTop_toBottomOf="@id/header"/>
+
+        <LinearLayout
+            android:id="@+id/follow_requests"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Follow Requests"
+                android:textColor="@color/blue"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:orientation="vertical"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/follow_requests"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">
+
+        <ListView
+            android:id="@+id/activity_create_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            />
+    </LinearLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -28,4 +240,6 @@
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation_main"
     />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
