--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,10 @@
     <style name="noAnimTheme" parent="@style/Theme.OldHabitsDieHard">
         <item name="android:windowAnimationStyle">@null</item>
     </style>
+
+    <style name="background">
+        <item name="android:background">#FFFFFFFF</item>
+    </style>
+
+    <style name="MyButtonStyle"><item name="android:textAllCaps">false</item></style>
 </resources>
