--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,6 +127,18 @@
         app:layout_constraintStart_toStartOf="@id/password_layout"
         app:layout_constraintHorizontal_bias="0.90"
         />
+
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="match_parent"
+        android:id="@+id/google_button"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
+
     <TextView
         android:id="@+id/info_box"
         android:layout_width="wrap_content"
