--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -28,4 +28,15 @@
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation_main"
     />
+
+
+    <Button
+        android:id="@+id/google_log_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Google Log Out"
+        android:backgroundTint="@color/pink"
+        android:textColor="@color/blue"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
