--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -10,8 +10,8 @@
         android:layout_marginTop="10sp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_arrow_back"
+        android:drawableTint="@color/pink"
         android:src="@drawable/ic_arrow_back"
-        android:text="Back to profile"
         android:textSize="15sp"
         android:layout_marginLeft="5sp"
         android:textColor="@color/blue"
@@ -19,6 +19,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/pink"
+        android:text="Log Out"
+        android:textColor="@color/blue"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:theme="@style/MyButtonStyle"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="10sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
     <LinearLayout
         android:id="@+id/edit_profile_header"
         android:layout_width="match_parent"
