--- a/app/src/main/res/layout/followers_view.xml
+++ b/app/src/main/res/layout/followers_view.xml
@@ -22,33 +22,30 @@
         android:id="@+id/follower_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/followers"
-        android:textSize="20sp"
-        android:textColor="@color/blueLight"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintTop_toBottomOf="@id/back_profile_following"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/following_header"
-
-        />
-    <TextView
-        android:id="@+id/following_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/following_u"
+        android:text="@string/follower_u"
         android:textSize="20sp"
         android:textColor="@color/blue"
         android:textStyle="bold"
         android:gravity="center"
         android:clickable="true"
         android:focusable="true"
+        app:layout_constraintTop_toBottomOf="@id/back_profile_following"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/following_header"/>
+    <TextView
+        android:id="@+id/following_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/following"
+        android:textSize="20sp"
+        android:textColor="@color/blueLight"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toEndOf="@id/follower_header"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_profile_following"/>
-
+        app:layout_constraintTop_toBottomOf="@id/back_profile_following" />
     <View
         android:id="@+id/following_divider"
         android:layout_width="match_parent"
@@ -65,13 +62,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/following_header"
         app:layout_constraintBottom_toBottomOf="parent">
-
         <ListView
-            android:id="@+id/following_list_2"
-            android:visibility="visible"
+            android:id="@+id/following_list_1"
+            android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -81,13 +76,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/follower_header"
         app:layout_constraintBottom_toBottomOf="parent">
-
         <ListView
-            android:id="@+id/follower_list_2"
-            android:visibility="invisible"
+            android:id="@+id/follower_list_1"
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
