--- a/app/src/main/res/layout/followers_view_content.xml
+++ b/app/src/main/res/layout/followers_view_content.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:id="@+id/requested_user"
+        android:id="@+id/follower_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="13dp"
@@ -14,23 +14,16 @@
         android:textColor="@color/blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/confirm_request"/>
-    <Button
-        android:id="@+id/confirm_request"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/confirm"
-        android:textSize="11sp"
-        android:layout_marginRight="5sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/delete_follower"/>
+
     <Button
         android:id="@+id/delete_follower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingVertical="0dp"
+        android:paddingHorizontal="3dp"
         android:backgroundTint="@color/pink"
-        android:text="@string/delete"
+        android:text="Delete Follower"
         android:textSize="11sp"
         android:textStyle="bold"
         android:textColor="@color/blue"
